IOT-126 add error handling

--- a/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
@@ -3,8 +3,8 @@
 <form (ngSubmit)="onSubmit()" class="os2-form mt-3 px-md-5 py-md-4">
     <div *ngIf="errorMessages" class="error-messages p-3">
         <ul class="mb-0">
-            <li *ngFor="let error of errorMessages">
-                {{error}}
+            <li>
+                {{errorMessages}}
             </li>
         </ul>
     </div>
