Tilføjelse af log ud

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -41,6 +41,9 @@
           {{ 'NAV.PAYLOAD-DECODER' | translate }}
         </a>
       </li>
+      <li class="nav-item py-2">
+        <a style="cursor: pointer;" class="nav-link pl-5 position-relative rounded" (click)="onLogout()">Logout</a>
+      </li>
     </ul>
   </div>
 </nav>
