init usergroups og users

--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -19,7 +19,7 @@
             </a>
         </li>
         <li class="nav-item py-2">
-            <a routerLink="/admin/organization" routerLinkActive="active"
+            <a routerLink="/admin/organisations" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
                 Organisation
             </a>
