--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel>
+<mat-expansion-panel class="mb-5">
     <mat-expansion-panel-header>
         <mat-panel-title class="nav-item py-2">
             Global Administrator
@@ -8,7 +8,7 @@
 
     <ul class="navbar-nav flex-column">
 
-        <li class="nav-item py-2">
+        <li class="nav-item">
             <a routerLink="/admin/users" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
                 Brugere
             </a>
