--- a/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
@@ -3,7 +3,7 @@
         <h4>Service Profiles</h4>
     </div>
     <div class="col-6">
-        <button class="btn btn-primary float-right" (click)="onNewServiceProfile()">New Service Profile</button>
+        <button class="btn btn-primary float-right" (click)="onNewServiceProfile()">{{'PROFILES.SERVICE_PROFILE.CREATE-NEW-SERVICE-PROFILE' | translate}}</button>
     </div>
 </div>
 <hr>
