--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
@@ -3,13 +3,17 @@
         <h4>Device Profiles</h4>
     </div>
     <div class="col-6">
-        <button class="btn btn-primary float-right" (click)="onNewDeviceProfile()">New Device Profile</button>
+        <button class="btn btn-primary float-right" 
+        [routerLink]="['deviceprofile/edit']"
+        routerLinkActive="active">{{'PROFILES.DEVICE_PROFILE.CREATE-NEW-DEVICE-PROFILE' | translate}}</button>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-device-profiles-item *ngFor="let deviceProfile of deviceProfiles; let i = index"
+        <app-device-profiles-item 
+            *ngFor="let deviceProfile of deviceProfiles; let i = index"
+            (deleteDeviceProfile)="deleteDeviceProfile($event)"
             [deviceProfile]="deviceProfile"></app-device-profiles-item>
     </div>
 </div>
