--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
@@ -1,18 +1,11 @@
 <div class=" list-group-item mb-1 clearfix" routerLinkActive="active">
     <div class="row">
         <div class="col-9 pull-left d-flex align-items-center">
-            <a [routerLink]="['deviceprofile/edit', deviceProfile.id]" class="container-fluid">
+            <a [routerLink]="['deviceprofile', deviceProfile.id]" class="container-fluid">
                 {{ deviceProfile.name }}
             </a>
         </div>
         <div class="col-3 pull-right d-flex align-items-center justify-content-end">
-            <a [routerLink]="['deviceprofile/edit', deviceProfile.id]"
-                routerLinkActive="active">
-                <div class="text-center m-2">
-                    <fa-icon [icon]="faPen"></fa-icon>
-                    <p>Rediger</p>
-                </div>
-            </a>
             <a (click)="onDeleteDeviceProfile()">
                 <div class="text-center m-2">
                     <fa-icon [icon]="faTimesCircle"></fa-icon>
