IOT-44: Organisation CRUD

--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -1,1 +1,32 @@
-<p>organisation-detail works!</p>
+<app-top-bar-single [data]="organisation" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
+<div class="p-5 row">
+    <div class="col-6">
+        <div class="card mb-5">
+            <div class="card-header">
+                <h2>{{ 'ORGANISATION.DETAIL.NAME' | translate }}</h2>
+            </div>
+            {{organisation.name}}
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-header">
+                {{ 'ORGANISATION.DETAIL.PERMISSIONS' | translate }}
+            </div>
+            <div>
+                <h1 style="color:rebeccapurple">TODO</h1>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-header">
+                {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
+            </div>
+            <div>
+                <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)">
+                </app-applications-table>
+            </div>
+        </div>
+    </div>
+</div>
