--- a/src/app/admin/organisation/organisation-tabel/organisation-tabel.component.html
+++ b/src/app/admin/organisation/organisation-tabel/organisation-tabel.component.html
@@ -1,1 +1,12 @@
-<p>organisation-tabel works!</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>{{ 'ORGANISATION.NAME' | translate }}</th>
+            <th>{{ 'ORGANISATION.APPLICATION-COUNT' | translate }}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let org of organisations" class="py-3" app-organisation-row [organisation]="org"
+            (deleteOrganisation)="deleteOrganisation($event)"></tr>
+    </tbody>
+</table>
