--- a/src/app/my-applications/applications-table/applications-table.component.html
+++ b/src/app/my-applications/applications-table/applications-table.component.html
@@ -12,7 +12,7 @@
             class="py-3"
             app-applications-table-row
             [application]="application"
-            (deleteApplication)="deleteApplication($event)"
+            (deleteApplication)="doDeleteApplication($event)"
         ></tr>
     </tbody>
 </table>
@@ -20,7 +20,7 @@
 <nav *ngIf="pageTotal > 1" [attr.aria-label]="'TABLE.PAGINATION' | translate">
     <ul class="pagination justify-content-center mt-5">
         <li class="page-item">
-            <a class="page-link" [routerLink]="" (click)="prevPage()"
+            <a class="page-link" [routerLink]="" (click)="gotoPrevPage()"
                 >Previous</a
             >
         </li>
@@ -30,7 +30,7 @@
             </div>
         </li>
         <li class="page-item">
-            <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
+            <a class="page-link" [routerLink]="" (click)="gotoNextPage()">Next</a>
         </li>
     </ul>
 </nav>
