--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -7,10 +7,9 @@
     </mat-expansion-panel-header>
 
     <ul class="navbar-nav flex-column">
-
         <li class="nav-item">
             <a routerLink="/admin/users" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
-                Brugere
+                {{'NAV.USERS' | translate}}
             </a>
         </li>
         <li class="nav-item py-2">
@@ -24,8 +23,6 @@
                 Organisation
             </a>
         </li>
-
-
     </ul>
 
 </mat-expansion-panel>
