--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -17,9 +17,31 @@
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
         </div>
     </div>
+    <div class="row mb-5">
+        <div class="form-group mt-3 col-12">
+            <label class="form-label" for="email">{{'USERS.FORM.EMAIL' | translate}}</label>*
+            <input type="text" class="form-control" id="email" name="email"
+                [placeholder]="'USERS.FORM.EMAIL-PLACEHOLDER' | translate" maxlength="50" required
+                [(ngModel)]="user.email"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('email'), 'is-valid' : formFailedSubmit && !errorFields.includes('email')}">
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="form-group mt-3 col-12">
+            <label class="form-label" for="password">{{'USERS.FORM.PASSWORD' | translate}}</label>*
+            <input type="text" class="form-control" id="password" name="password"
+                [placeholder]="'USERS.FORM.PASSWORD-PLACEHOLDER' | translate" maxlength="50" required
+                [(ngModel)]="user.password"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('password'), 'is-valid' : formFailedSubmit && !errorFields.includes('password')}">
+        </div>
+    </div>
+
+    <mat-slide-toggle [(ngModel)]="user.permissions" id="permission" name="permission">
+        {{'USERS.FORM.GLOBAL-ADMIN' | translate}}</mat-slide-toggle>
 
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-        <button class="btn btn-dark ml-2" type="submit">{{ 'PAYLOAD-DECODER.SAVE' | translate}}</button>
+        <button class="btn btn-primary ml-2" type="submit">{{ 'PAYLOAD-DECODER.SAVE' | translate}}</button>
     </div>
 </form>
